fixed layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+/* 
+const initialItems = [
+  { id: 1, description: "Passports", quantity: 2, packed: false },
+  { id: 2, description: "Socks", quantity: 12, packed: false },
+];
+*/
+
 @import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
 
 * {
@@ -54,7 +61,7 @@ h3 {
 button,
 select,
 input {
-  background-color: #e9e8dc;
+  background-color: #ffebb3;
   color: #5a3e2b;
   font-family: inherit;
   border: none;
@@ -62,12 +69,9 @@ input {
   padding: 1.2rem 3.2rem;
   font-weight: 700;
   font-size: 1.8rem;
-}
-
-button,
-select {
   cursor: pointer;
 }
+
 .add-form button {
   text-transform: uppercase;
   background-color: #76c7ad;
@@ -128,31 +132,8 @@ input[type="checkbox"] {
 }
 
 .stats {
-  background-color: #d8c3a4;
+  background-color: #76c7ad;
   text-align: center;
   font-weight: 700;
   padding: 3.2rem 0;
-}
-.close-button {
-  width: 20px;
-  height: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #ccc;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.close-button:hover {
-  background-color: #999;
-}
-
-.close-icon {
-  font-size: 14px;
-  color: #fff;
-  display: inline-block;
-  line-height: 1;
-  vertical-align: middle;
 }
